--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "dependencies": {
-    "yargs": "^17.7.2"
-  }
+    "dependencies": {
+        "yargs": "^17.7.2"
+    },
+    "name": "netology",
+    "version": "1.0.0",
+    "main": "date.js",
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
